# monster-chess

./: Cargo.toml  README.md
benches/: chess-perft.rs  perft.rs
src/: bitset.rs  board.rs  lib.rs  main.rs
src/bitboard/: bitops.rs  bitscan.rs  mod.rs  numops.rs  ord.rs  shifts.rs  transforms.rs  util.rs
src/bitset/: bitops.rs  bitscan.rs  mod.rs  numops.rs  ord.rs  shifts.rs  util.rs
src/board/: actions.rs  edges.rs  fen.rs  game.rs  lookups.rs  mod.rs  perft.rs  positions.rs  tests.rs  util.rs  zobrist.rs
src/board/fen/: args.rs  init.rs  mod.rs  options.rs  state.rs
src/board/pieces/: base.rs  king.rs  knight.rs  mod.rs  pawn.rs  rook.rs
src/board/pieces/sliders/: bishop.rs  queen.rs  rook.rs  util.rs
src/games/: mod.rs
src/games/ataxx/: controller.rs  game.rs  mod.rs  process.rs  resolution.rs  restrictions.rs  suite.rs
src/games/ataxx/pieces/: mod.rs
src/games/chess/: args.rs  controller.rs  game.rs  mod.rs  process.rs  resolution.rs  restrictions.rs  suite.rs  zobrist.rs
src/games/chess/pieces/: king.rs  knight.rs  mod.rs  pawn.rs
src/games/chess/pieces/sliders/: bishop.rs  mod.rs  queen.rs  rook.rs  util.rs
src/pieces/: base.rs
