[package]
name = "monster-chess"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A fairy chess movegen library that can be easily extended to new chess-adjacent games."
repository = "https://github.com/chesstastic-org/monster-chess"
readme = "README.md"
categories = ["games"]
keywords = ["chess", "ataxx", "movegen"]

[profile.release]
debug = true

[dependencies]
arrayvec = "0.7.2"
fastrand = "1.9.0"
shell-words = "1.1.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "chess-perft"
harness = false
