[package]
name = "monster_chess"
version = "0.0.19"
edition = "2021"
license = "MIT"
description = "A fairy chess movegen library that can be easily extended to new chess-adjacent games."
repository = "https://github.com/chesstastic-org/monster-chess"
readme = "README.md"
categories = ["games"]
keywords = ["chess", "ataxx", "movegen"]

[profile.release]
debug = true

[dependencies]
fastrand = "2.0.0"
heapless = "0.8.0"
shell-words = "1.1.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "perft"
harness = false
